log
Tue 14 May 2024 03:07:36 PM UTC: 
 tests:  0|5
total_score: 0/70
b1d66dc
Tue 14 May 2024 03:11:29 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
aa19cb9
Tue 14 May 2024 03:15:00 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|4
total_score: 20/70
4038501
Thu 16 May 2024 12:24:05 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|4
total_score: 20/70
9a387ff
Thu 16 May 2024 12:24:30 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
5ae9066
Thu 16 May 2024 12:26:17 AM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
6a6f3a4
Sat 18 May 2024 05:52:10 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
3ff2670
Sat 18 May 2024 05:54:09 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
50a3c04
Sat 18 May 2024 06:17:32 PM UTC: 
 sudoku.c | 40 +++++++++++++++++++++++++++++-----------
 1 file changed, 29 insertions(+), 11 deletions(-)
 tests:  7|1
total_score: 55/70
cedbcbc
Sat 18 May 2024 06:19:59 PM UTC: 
 sudoku.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:131:13: error: unused variable ‘n’ [-Werror=unused-variable]
  131 |       Node* n = top(S);
      |             ^
sudoku.c:135:1: error: control reaches end of non-void function [-Werror=return-type]
  135 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
de9efe7
Sat 18 May 2024 06:23:07 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:149:1: error: control reaches end of non-void function [-Werror=return-type]
  149 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0ff70c5
Sat 18 May 2024 06:23:18 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|0
total_score: 70/70
d6d6b76
Sat 18 May 2024 06:24:38 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|0
total_score: 70/70
798c5dd
